--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,15 +14,20 @@ dependencies = [
     "polytopax>=0.0.1",
 ]
 
+[dependency-groups]
+dev = [
+    "ipython>=9.7.0",
+    "pytest>=9.0.2",
+    "scipy>=1.16.3",
+]
+
 [tool.uv.sources]
 gdtk = { path = "../../../GDTk/gdtk.pythonic-dataclasses/src/gdtk-py", editable = true }
 lox = { git = "https://github.com/huterguier/lox" }
 
 [tool.ruff]
 line-length = 100
+ignore = ["F722"]
 
-[dependency-groups]
-dev = [
-    "ipython>=9.7.0",
-    "scipy>=1.16.3",
-]
+[tool.pytest.ini_options]
+python_files = ["*.py"]
